objects/TriggerHandler__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Grouping__c</fullName>
        <description>A comma separated list of key words to search by for layout purposes (Example: Contact, Account, Orgs)</description>
        <inlineHelpText>A comma separated list of key words to search by for layout purposes (Example: Contact, Account, Orgs)</inlineHelpText>
        <label>Filter Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TriggerHandler</label>
    <listViews>
        <fullName>Account_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Active__c</columns>
        <columns>Order__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sObject__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Triggers</label>
    </listViews>
    <listViews>
        <fullName>All_Main_View</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Main View</label>
    </listViews>
    <listViews>
        <fullName>Case_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sObject__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <label>Case Triggers</label>
    </listViews>
    <listViews>
        <fullName>Dealer_Doc_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sObject__c</field>
            <operation>equals</operation>
            <value>Dealer_Docs__c</value>
        </filters>
        <label>Dealer Doc Triggers</label>
    </listViews>
    <listViews>
        <fullName>FSL_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>FSL</value>
        </filters>
        <label>FSL Triggers</label>
    </listViews>
    <listViews>
        <fullName>FSL_WorkRequest</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>WorkRequest</value>
        </filters>
        <label>FSL - WorkRequest</label>
    </listViews>
    <listViews>
        <fullName>Group_Related_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Active__c</columns>
        <columns>Order__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>Groups</value>
        </filters>
        <label>Group Related Triggers</label>
    </listViews>
    <listViews>
        <fullName>Org_Triggers</fullName>
        <columns>Class_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Before_Insert__c</columns>
        <columns>After_Insert__c</columns>
        <columns>Before_Update__c</columns>
        <columns>After_Update__c</columns>
        <columns>Before_Delete__c</columns>
        <columns>After_Delete__c</columns>
        <columns>Before_Undelete__c</columns>
        <columns>After_Undelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>Orgs</value>
        </filters>
        <label>Org Triggers</label>
    </listViews>
    <pluralLabel>TriggerHandlers</pluralLabel>
</CustomObject>